@@ -19,12 +19,15 @@ Bugfixes
 
 - On the person edit form:
 
+  - the the last modification dates of the entries (postal address,
+    phone number etc.) where the one of the person.
+
   - the keywords field was not correctly implemented: it was always
     marked as changed so the a new last modification date on the
     person was set, even when nothing has been changed.
 
-  - the the last modification dates of the entries (postal address,
-    phone number etc.) where the one of the person.
+  - editing a field of an entry did not change the modification date
+    of this entry but of the person.
 
 
 1.0.1 (2010-01-13)
